LPS-142236 Fix Misalignment on "Dummy" Links

--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/congrats-information/index.css
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/congrats-information/index.css
@@ -1,84 +1,84 @@
 .congrats-information {
-  background-color: var(--color-neutral-0);
-  border: 1px solid var(--color-brand-primary-lighten-3);
-  border-radius: 8px;
-  box-shadow: 0px 10px 30px rgba(77, 133, 255, 0.09);
-  height: 396px;
-  padding: 40px 45px;
-  width: 749px;
+	background-color: var(--color-neutral-0);
+	border: 1px solid var(--color-brand-primary-lighten-3);
+	border-radius: 8px;
+	box-shadow: 0px 10px 30px rgba(77, 133, 255, 0.09);
+	height: 396px;
+	padding: 40px 45px;
+	width: 749px;
 }
 
 .congrats-information h1 {
-  color: var(--color-neutral-black);
-  font-size: 32px;
-  font-weight: var(--font-weight-bold);
-  line-height: 40px;
+	color: var(--color-neutral-black);
+	font-size: 32px;
+	font-weight: var(--font-weight-bold);
+	line-height: 40px;
 }
 
 .congrats-info-price {
-  color: var(--color-neutral-9);
-  font-size: 32px;
-  font-weight: 300;
-  line-height: 40px;
+	color: var(--color-neutral-9);
+	font-size: 32px;
+	font-weight: 300;
+	line-height: 40px;
 }
 
 .congrats-info-price span {
-  color: var(--color-neutral-black);
-  font-size: 32px;
-  font-weight: var(--font-weight-bold);
-  line-height: 40px;
-  position: static;
+	color: var(--color-neutral-black);
+	font-size: 32px;
+	font-weight: var(--font-weight-bold);
+	line-height: 40px;
+	position: static;
 }
 
 .congrats-information h2 {
-  color: var(--color-neutral-9);
-  font-size: 18px;
-  font-weight: var(--font-weight-bold);
-  line-height: 20px;
+	color: var(--color-neutral-9);
+	font-size: 18px;
+	font-weight: var(--font-weight-bold);
+	line-height: 20px;
 }
 
 .congrats-information h3 {
-  color: var(--color-neutral-black);
-  font-size: 16px;
-  font-weight: 500;
-  left: 0;
-  line-height: 24px;
-  width: 200px;
+	color: var(--color-neutral-black);
+	font-size: 16px;
+	font-weight: 500;
+	left: 0;
+	line-height: 24px;
+	width: 200px;
 }
 
 .congrats-information table {
-  border-collapse: separate;
-  border-spacing: 0 1rem;
-  margin-top: -5px;
+	border-collapse: separate;
+	border-spacing: 0 1rem;
+	margin-top: -5px;
 }
 
 .congrats-information table td {
-  color: var(--color-neutral-8);
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 20px;
+	color: var(--color-neutral-8);
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 22px;
 }
 
 .congrats-information table td:first-child {
-  width: 280px;
+	width: 280px;
 }
 
 .congrats-information ul {
-  list-style: none;
-  margin-top: 10px;
+	list-style: none;
+	margin-top: 10px;
 }
 
 .congrats-information li {
-  color: var(--color-action-neutral-default);
-  cursor: pointer;
-  display: flex;
-  font-size: 18px;
-  font-weight: var(--font-weight-bold);
-  justify-content: end;
-  line-height: 24px;
-  margin-bottom: 20px;
+	color: var(--color-action-neutral-default);
+	cursor: pointer;
+	display: flex;
+	font-size: 18px;
+	font-weight: var(--font-weight-bold);
+	justify-content: flex-end;
+	line-height: 22px;
+	margin-bottom: 1rem;
 }
 
 .congrats-information li img {
-  margin-left: 6px;
+	margin-left: 6px;
 }
